--- a/06_dom/index.html
+++ b/06_dom/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="bg-black">
-        <h1 class="heading">DOM learning on nimbuPani with Code</h1>
+        <h1 id="title" class="heading">DOM learning on nimbuPani with Code</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum.</p>
     </div>
 </body>
