--- a/06_dom/index.html
+++ b/06_dom/index.html
@@ -1,14 +1,40 @@
+<!-- DOM (Document Object Model) Manipulation -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM learning</title>
+    <style>
+        .bg-black{
+            background-color: #121212;
+            color: #fff;
+        }
+        h6{
+            padding: 5px;
+            background: #ff5151;
+            border-radius: 5px;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
+<body class="bg-black">
+    <div>
         <h1 id="title" class="heading">DOM learning on nimbuPani with Code</h1>
+        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+        <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+        <h5>Lorem ipsum dolor sit amet consectetur.</h5>
+        <h6>Lorem ipsum dolor sit amet consectetur.</h6>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum.</p>
+        <ul class="language">
+            <li class="list-item">Java</li>
+            <li class="list-item">Java</li>
+            <li class="list-item">Python</li>
+            <li class="list-item">Python</li>
+            <li class="list-item">Cpp</li>
+            <li class="list-item">Cpp</li>
+        </ul>
     </div>
 </body>
 </html>
