nodeList and HtlmCollection more understanding

--- a/06_dom/index.html
+++ b/06_dom/index.html
@@ -36,5 +36,23 @@
             <li class="list-item">Cpp</li>
         </ul>
     </div>
+
+    <script>
+        // let listItem = document.getElementsByTagName("li");
+        // console.log(listItem);
+        // console.log(listItem.length);
+
+        // listItem[0].parentNode.appendChild(document.createElement("li"))
+        // console.log(itemList);
+        // console.log(itemList.length);
+
+        const listItem = document.querySelectorAll("li")
+        console.log(listItem);
+        console.log(listItem.length);
+
+        llistItem[0].document.appendChild(document.createElement("li"))
+        console.log(listItem);
+        console.log(listItem.length);
+    </script>
 </body>
 </html>
