--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -21,9 +21,9 @@
       >
     </nav>
     <main>
-      <h1>Nimbu pani</h1>
       <div class="projects">
-        <a href="./01-colorChanger/index.html" class="project-link"
+        <h1>Nimbu pani</h1>
+        <a target="_blank" href="./01_colorChanger/index.html" class="project-link"
           >Project One - color Changer</a
         >
         <a href="../02-BMICalculator/index.html" class="project-link"
