--- a/07_projects/02_BMICalculator/index.html
+++ b/07_projects/02_BMICalculator/index.html
@@ -17,21 +17,14 @@
         >PortFolio</a
       >
     </nav>
-    <main>
-      <div class="canvas">
-        <h1>Color Scheme Switcher</h1>
-        <div class="buttonBox">
-          <span class="button" id="red"></span>
-          <span class="button" id="white"></span>
-          <span class="button" id="gray"></span>
-          <span class="button" id="green"></span>
-        </div>
-        <h2>
-          Try clicking on one of the colors above
-          <span>to change the background color of this page!</span>
-        </h2>
-      </div>
-    </main>
+    <div class="canvas">
+      <h1>BMI Calculator</h1>
+      <label for=""></label><input type="text">
+      <h2>
+        Try clicking onone of the colors above
+        <span>to change the background color of this page!</span>
+      </h2>
+    </div>
     <script src="./colorBehaviour.js"></script>
   </body>
 </html>
