2nd project continues

--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -26,13 +26,13 @@
         <a target="_blank" href="./01_colorChanger/index.html" class="project-link"
           >Project One - color Changer</a
         >
-        <a href="../02-BMICalculator/index.html" class="project-link"
+        <a href="./02_BMICalculator/index.html" class="project-link"
           >Project two - BMI generator</a
         >
         <a href="../03-DigitalClock/index.html" class="project-link"
           >Project three - Digital Clock</a
         >
-        <a href="../04-guessTheNumber/index.html" class="project-link"
+        <a href="./04_GuessTheNumber/index.html" class="project-link"
           >Project four - Guess The Number</a
         >
       </div>
