--- a/07_projects/02_BMICalculator/index.html
+++ b/07_projects/02_BMICalculator/index.html
@@ -2,29 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="../styles.css" />
-    <title>JavaScript Background Color Switcher</title>
+    <title>BMI Calculator</title>
   </head>
   <body>
     <nav>
       <a href="../index.html" aria-current="page">Home</a>
-      <a
-        target="_blank"
-        href="https://prashant29062003.github.io/Prashant.Portfolio.github.io/"
-        >PortFolio</a
+      <a target="_blank" href="https://www.youtube.com/@chaiaurcode"
+        >Youtube channel</a
       >
     </nav>
-    <div class="canvas">
+    <div class="container">
       <h1>BMI Calculator</h1>
-      <label for=""></label><input type="text">
-      <h2>
-        Try clicking onone of the colors above
-        <span>to change the background color of this page!</span>
-      </h2>
+      <form>
+        <p><label for="height">Height in CM: </label><input type="text" id="height" /></p>
+        <p><label for="weight">Weight in KG: </label><input type="text" id="weight" /></p>
+        <button>Calculate</button>
+        <div id="results"></div>
+        <div id="weight-guide">
+          <h3>BMI Weight Guide</h3>
+          <p>Under Weight = Less than 18.6</p>
+          <p>Normal Range = 18.6 and 24.9</p>
+          <p>Overweight = Greater than 24.9</p>
+        </div>
+      </form>
     </div>
-    <script src="./colorBehaviour.js"></script>
   </body>
+  <script src="chaiaurcode.js"></script>
 </html>
