--- a/07_projects/02_BMICalculator/index.html
+++ b/07_projects/02_BMICalculator/index.html
@@ -11,8 +11,10 @@
   <body>
     <nav>
       <a href="../index.html" aria-current="page">Home</a>
-      <a target="_blank" href="https://www.youtube.com/@chaiaurcode"
-        >Youtube channel</a
+      <a
+        target="_blank"
+        href="https://prashant29062003.github.io/Prashant.Portfolio.github.io/"
+        >PortFolio</a
       >
     </nav>
     <div class="container">
@@ -20,16 +22,17 @@
       <form>
         <p><label for="height">Height in CM: </label><input type="text" id="height" /></p>
         <p><label for="weight">Weight in KG: </label><input type="text" id="weight" /></p>
-        <button>Calculate</button>
+        <!-- <button type="submit">Calculate</button> -->
+        <button type="submit">Calculate</button>
         <div id="results"></div>
         <div id="weight-guide">
           <h3>BMI Weight Guide</h3>
-          <p>Under Weight = Less than 18.6</p>
-          <p>Normal Range = 18.6 and 24.9</p>
-          <p>Overweight = Greater than 24.9</p>
+          <p id="uWeight">Under Weight = Less than 18.6</p>
+          <p id="nWeight">Normal Range = 18.6 and 24.9</p>
+          <p id="oWeight">Overweight = Greater than 24.9</p>
         </div>
       </form>
     </div>
   </body>
-  <script src="chaiaurcode.js"></script>
+  <script src="./bmiCalculatorBehaviour.js"></script>
 </html>
