--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -29,7 +29,7 @@
         <a href="./02_BMICalculator/index.html" class="project-link"
           >Project two - BMI generator</a
         >
-        <a href="../03-DigitalClock/index.html" class="project-link"
+        <a href="./03_DigitalClock/index.html" class="project-link"
           >Project three - Digital Clock</a
         >
         <a href="./04_GuessTheNumber/index.html" class="project-link"
