--- a/07_projects/04_GuessTheNumber/index.html
+++ b/07_projects/04_GuessTheNumber/index.html
@@ -17,13 +17,13 @@
         >PortFolio</a
       >
     </nav>
+    <h1>Number guessing game</h1>
     <div id="wrapper">
-      <h1>Number guessing game</h1>
     <p>Try and guess a random number between 1 and 100.</p>
     <p>You have 10 attempts to guess the right number.</p>
     </br>
         <form class="form">
-            <label2 for="guessField" id="guess">Guess a number</label>
+            <p><label2 for="guessField" id="guess">Guess a number</label2></p>
             <input type="text" id="guessField" class="guessField">
             <input type="submit" id="subt" value="Submit guess" class="guessSubmit">
         </form>
@@ -34,6 +34,6 @@
             <p class="lowOrHi"></p>
         </div>
     </div>
-    <script src="./colorBehaviour.js"></script>
+    <script src="./GuessNumber.js"></script>
   </body>
 </html>
