quiz app is ready

--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -35,6 +35,9 @@
         <a href="./04_GuessTheNumber/index.html" class="project-link"
           >Project four - Guess The Number</a
         >
+        <a href="./05_QuizApp/index.html" class="project-link"
+          >Project four - Guess The Number</a
+        >
       </div>
     </main>
   </body>
