--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -36,7 +36,10 @@
           >Project four - Guess The Number</a
         >
         <a href="./05_QuizApp/index.html" class="project-link"
-          >Project four - Guess The Number</a
+          >Quiz APP</a
+        >
+        <a href="./06_unlimitedColors/index.html" class="project-link"
+          >Color changing Unlimited</a
         >
       </div>
     </main>
