keyboard values inn table | show project 7

--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -41,6 +41,9 @@
         <a href="./06_unlimitedColors/index.html" class="project-link"
           >Color changing Unlimited</a
         >
+        <a href="./07_keyBoard/index.html" class="project-link"
+          >Key board values</a
+        >
       </div>
     </main>
   </body>
