--- a/09_XMLHttpRequest/index.html
+++ b/09_XMLHttpRequest/index.html
@@ -97,7 +97,7 @@ statusText	Returns the status-text (e.g. "OK" or "Not Found") -->
                 </table>
             </div>
             <div>
-                <img class="avatar" src="" alt="">
+                <img width="200" height="200" id="avatar" src="" alt="">
             </div>
 
             
@@ -173,5 +173,6 @@ statusText	Returns the status-text (e.g. "OK" or "Not Found") -->
         xhr.send()
         
     </script>
+    <script src="./promises.js"></script>
 </body>
 </html>
